# nextrelease

./: .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.rst  pyproject.toml
deploy/: github.sh  gitlab.sh
docs/: conf.py  index.rst
gitrelease/: aftermerge.py  changelog.py  cmds.py  common.py  config.py  fakepr.py  fixfeature.py  fixor.py  fixorfeat.py  nextrelease.py  versionupdater.py
tests/: suite  test_gitrelease.py  testrun.sh
