[tool.poetry]
name = "gitrelease"
version = "0.3.10"
description = ""
authors = ["Joe <joe@sunset-crew.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
sphinx = "^3.4.1"
recommonmark = "^0.7.1"
pytest = "^6.2.1"

[tool.poetry.scripts]
git-aftermerge = "gitrelease.cmds:git_aftermerge"
git-nextrelease = "gitrelease.cmds:git_nextrelease"
git-versionupdater = "gitrelease.cmds:git_versionupdater"
git-changelog = "gitrelease.cmds:git_changelog"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
