[tool.poetry]
name = "gitrelease"
version = "0.4.4"
description = ""
authors = ["Joe <joe@sunset-crew.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pytest = "^7.0.1"
recommonmark = "^0.7.1"
Sphinx = "^3.4.1"

[tool.poetry.scripts]
git-aftermerge = "gitrelease.cmds:git_aftermerge"
git-nextrelease = "gitrelease.cmds:git_nextrelease"
git-versionupdater = "gitrelease.cmds:git_versionupdater"
git-changelog = "gitrelease.cmds:git_changelog"
git-fixor = "gitrelease.fixor:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
