[tool.poetry]
name = "gitrelease"
version = "0.5.4"
description = "a git release/feature/fix branch management cli"
authors = ["Joe <joe@sunset-crew.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^7.0.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
recommonmark = "^0.7.1"
Sphinx = "^3.4.1"

[tool.poetry.scripts]
git-aftermerge = "gitrelease.cmds:git_aftermerge"
git-nextrelease = "gitrelease.cmds:git_nextrelease"
git-versionupdater = "gitrelease.cmds:git_versionupdater"
git-changelog = "gitrelease.cmds:git_changelog"
git-ff = "gitrelease.fixfeature:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
